Tweak widget titles.

--- a/dashboards/cayenne.erb
+++ b/dashboards/cayenne.erb
@@ -1,10 +1,12 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="cayenne.data.deposit-size.mean" data-view="Number" data-title="Mean deposit size"></div>
+      <div data-id="cayenne.data.deposit-size.mean" data-view="Number" data-title="Mean deposit size"
+           data-suffix="B"></div>
     </li>
     <li data=row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="cayenne.data.deposits-received" data-view="Number" data-title="Deposits per minute"></div>
+      <div data-id="cayenne.data.deposits-received" data-view="Number" data-title="Deposit rate"
+           data-moreinfo="Per minute"></div>
     <li>
     <li data=row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="cayenne.data.deposit-count" data-view="Number" data-title="Deposits to date"></div>
