--- a/dashboards/cayenne.erb
+++ b/dashboards/cayenne.erb
@@ -26,15 +26,15 @@ $(function() {
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cayenne.data.deposits-received" data-view="Meter" data-title="Deposit rate"
-           data-moreinfo="Per minute of historical max" data-min="0" data-max="100" data-suffix="%"></div>
+           data-moreinfo="Avg. per second over last 5 mins" data-min="0" data-max="100"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="ring.requests.rate" data-view="Meter" data-title="API request rate"
-           data-moreinfo="Per minute of historical max" data-min="0" data-max="100" data-suffix="%"></div>
+           data-moreinfo="Avg. per second over last 5 mins" data-min="0" data-max="100"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="ring.responses.rate.4xx" data-view="Meter" data-title="API fail rate"
-           data-moreinfo="Per minute of historical max" data-min="0" data-max="100" data-suffix="%"></div>
+           data-moreinfo="Avg. per second over last 5 mins" data-min="0" data-max="100"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cayenne.jobs.waiting" data-view="Meter" data-title="Jobs queued"
@@ -49,6 +49,16 @@ $(function() {
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cayenne.jobs.running" data-view="Meter" data-title="Jobs running"
            data-min="0" data-max="40"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="cayenne.xml.record-process-rate" data-view="Meter" 
+           data-title="Record processing rate"
+	   data-moreinfo="Avg. per second over last 5 mins"
+           data-min="0" data-max="100"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="cayenne.xml.records-processed" data-view="Number" 
+           data-title="Records processed"></div>
     </li>
   </ul>
 </div>
